added section on ipython help

--- a/Orbits.ipynb
+++ b/Orbits.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6388bc5acc80edfd5a2917d00ac8487590b894d620f85ad59f951f3f713af73b"
+  "signature": "sha256:4147b89f4d972a70169c03e01ccf66ccdb4bafccca00f9499c7087479a5de745"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -614,7 +614,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "You can find a complete list of modules that come with Python as standard [here](https://docs.python.org/2/py-modindex.html). A great rule-of-thumb in Python is, if you're writing code to do something complicated, stop. See if there's a module that does it for you. **The best learning tool for Python is google!**"
+      "You can find a complete list of modules that come with Python as standard [here](https://docs.python.org/2/py-modindex.html). A great rule-of-thumb in Python is, if you're writing code to do something complicated, stop. See if there's a module that does it for you. **The best learning tool for Python is google!**\n",
+      "\n",
+      "If you are using the iPython interpreter to run Python interactively, you can get help on any module or function by using the \"help\" function, e.g.\n",
+      "\n",
+      "```python\n",
+      "help(math.radians)\n",
+      "```"
      ]
     },
     {
