--- a/Orbits.ipynb
+++ b/Orbits.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4147b89f4d972a70169c03e01ccf66ccdb4bafccca00f9499c7087479a5de745"
+  "signature": "sha256:e729be2cf479301074395ee4cfc0e955eeaca047722712922880e976f25ac953"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -105,7 +105,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Is python installed on my managed desktop machine?"
@@ -120,7 +120,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "How to run Python"
@@ -167,7 +167,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 5,
+     "level": 3,
      "metadata": {},
      "source": [
       "The power of Python"
@@ -412,7 +412,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Operators"
@@ -544,7 +544,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Modules"
@@ -625,7 +625,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 4,
+     "level": 3,
      "metadata": {},
      "source": [
       "Exercise:"
@@ -640,7 +640,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Lists and Iteration"
@@ -789,7 +789,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Functions"
@@ -874,7 +874,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 5,
      "metadata": {},
      "source": [
       "Plotting in Python"
@@ -946,7 +946,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 4,
+     "level": 3,
      "metadata": {},
      "source": [
       "Exercise:"
@@ -991,7 +991,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 4,
+     "level": 3,
      "metadata": {},
      "source": [
       "Theory"
@@ -1012,7 +1012,7 @@
       "\n",
       "**Exercise: **Using the diagram below, write equations for the amount of acceleration in the x- and y-directions.\n",
       "\n",
-      "<img src=\"/files/Images/earthAccel.png\" width=\"450\">\n",
+      "<img src=\"./Images/earthAccel.png\" width=\"450\">\n",
       "\n",
       "**Exercise: **Using the equations you've derived, write a python function that accepts the x and y position of the Earth as arguments, and returns the x and y acceleration of the Earth. Call your function 'accel', and save your python function in a file named 'orbit.py'"
      ]
@@ -1049,7 +1049,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 4,
+     "level": 3,
      "metadata": {},
      "source": [
       "Method"
@@ -1155,7 +1155,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 3,
      "metadata": {},
      "source": [
       "Elliptical Orbits"
@@ -1176,7 +1176,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 6,
+     "level": 3,
      "metadata": {},
      "source": [
       "Discussion"
@@ -1204,6 +1204,187 @@
       "* [numpy tutorial](http://wiki.scipy.org/Tentative_NumPy_Tutorial)\n",
       "* http://www.astropy.org/ (A python module for astronomers)"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "-------------------------------\n",
+      "######The cell below loads the style of this notebook. Please ignore it."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.core.display import HTML\n",
+      "css_file = '../styles.css'\n",
+      "HTML(open(css_file, \"r\").read())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>\n",
+        "<style>\n",
+        "\n",
+        "@font-face {\n",
+        "    font-family: \"Computer Modern\";\n",
+        "    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+        "}\n",
+        "\n",
+        "#notebook_panel { /* main background */\n",
+        "    background: rgb(245,245,245);\n",
+        "}\n",
+        "\n",
+        "div.cell { /* set cell width */\n",
+        "    width: 750px;\n",
+        "}\n",
+        "\n",
+        "div #notebook { /* centre the content */\n",
+        "    background: #fff; /* white background for content */\n",
+        "    width: 1000px;\n",
+        "    margin: auto;\n",
+        "    padding-left: 0em;\n",
+        "}\n",
+        "\n",
+        "#notebook li { /* More space between bullet points */\n",
+        "margin-top:0.8em;\n",
+        "}\n",
+        "\n",
+        "/* draw border around running cells */\n",
+        "div.cell.border-box-sizing.code_cell.running { \n",
+        "    border: 1px solid #111;\n",
+        "}\n",
+        "\n",
+        "/* Put a solid color box around each cell and its output, visually linking them*/\n",
+        "div.cell.code_cell {\n",
+        "    background-color: rgb(256,256,256); \n",
+        "    border-radius: 0px; \n",
+        "    padding: 0.5em;\n",
+        "    margin-left:1em;\n",
+        "    margin-top: 1em;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render{\n",
+        "    font-family: 'Alegreya Sans' sans-serif;\n",
+        "    line-height: 140%;\n",
+        "    font-size: 100%;\n",
+        "    font-weight: 400;\n",
+        "    width:600px;\n",
+        "    margin-left:auto;\n",
+        "    margin-right:auto;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "/* Formatting for header cells */\n",
+        ".text_cell_render h1 {\n",
+        "    font-family: 'Nixie One', serif;\n",
+        "    font-style:regular;\n",
+        "    font-weight: 400;    \n",
+        "    font-size: 45pt;\n",
+        "    line-height: 100%;\n",
+        "    color: rgb(0,51,102);\n",
+        "    margin-bottom: 0.5em;\n",
+        "    margin-top: 0.5em;\n",
+        "    display: block;\n",
+        "}\t\n",
+        ".text_cell_render h2 {\n",
+        "    font-family: 'Nixie One', serif;\n",
+        "    font-weight: 400;\n",
+        "    font-size: 30pt;\n",
+        "    line-height: 100%;\n",
+        "    color: rgb(0,51,102);\n",
+        "    margin-bottom: 0.1em;\n",
+        "    margin-top: 0.3em;\n",
+        "    display: block;\n",
+        "}\t\n",
+        "\n",
+        ".text_cell_render h3 {\n",
+        "    font-family: 'Nixie One', serif;\n",
+        "    margin-top:16px;\n",
+        "\tfont-size: 22pt;\n",
+        "    font-weight: 600;\n",
+        "    margin-bottom: 3px;\n",
+        "    font-style: regular;\n",
+        "    color: rgb(102,102,0);\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h4 {    /*Use this for captions*/\n",
+        "    font-family: 'Nixie One', serif;\n",
+        "    font-size: 14pt;\n",
+        "    text-align: center;\n",
+        "    margin-top: 0em;\n",
+        "    margin-bottom: 2em;\n",
+        "    font-style: regular;\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h5 {  /*Use this for small titles*/\n",
+        "    font-family: 'Nixie One', sans-serif;\n",
+        "    font-weight: 400;\n",
+        "    font-size: 16pt;\n",
+        "    color: rgb(163,0,0);\n",
+        "    font-style: italic;\n",
+        "    margin-bottom: .1em;\n",
+        "    margin-top: 0.8em;\n",
+        "    display: block;\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h6 { /*use this for copyright note*/\n",
+        "    font-family: 'PT Mono', sans-serif;\n",
+        "    font-weight: 300;\n",
+        "    font-size: 9pt;\n",
+        "    line-height: 100%;\n",
+        "    color: grey;\n",
+        "    margin-bottom: 1px;\n",
+        "    margin-top: 1px;\n",
+        "}\n",
+        "\n",
+        ".CodeMirror{\n",
+        "        font-family: \"PT Mono\";x\n",
+        "        font-size: 100%;\n",
+        "}\n",
+        "\n",
+        "</style>\n",
+        "<script>\n",
+        "    MathJax.Hub.Config({\n",
+        "                        TeX: {\n",
+        "                           extensions: [\"AMSmath.js\"],\n",
+        "                           equationNumbers: { autoNumber: \"AMS\", useLabelIds: true}\n",
+        "                           },\n",
+        "                tex2jax: {\n",
+        "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+        "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+        "                },\n",
+        "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+        "                \"HTML-CSS\": {\n",
+        "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+        "                }\n",
+        "        });\n",
+        "</script>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "<IPython.core.display.HTML at 0x1097b1c50>"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
