--- a/Orbits.ipynb
+++ b/Orbits.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e729be2cf479301074395ee4cfc0e955eeaca047722712922880e976f25ac953"
+  "signature": "sha256:a034e2803dffce4ee09270eee451d3723349659f5b22a7b5354ce0dba42dabef"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1274,7 +1274,7 @@
         "div.text_cell_render{\n",
         "    font-family: 'Alegreya Sans' sans-serif;\n",
         "    line-height: 140%;\n",
-        "    font-size: 100%;\n",
+        "    font-size: 115%;\n",
         "    font-weight: 400;\n",
         "    width:600px;\n",
         "    margin-left:auto;\n",
@@ -1346,7 +1346,7 @@
         "}\n",
         "\n",
         ".CodeMirror{\n",
-        "        font-family: \"PT Mono\";x\n",
+        "        font-family: \"PT Mono\";\n",
         "        font-size: 100%;\n",
         "}\n",
         "\n",
@@ -1370,21 +1370,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 10,
        "text": [
-        "<IPython.core.display.HTML at 0x1097b1c50>"
+        "<IPython.core.display.HTML at 0x1097b1f10>"
        ]
       }
      ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 10
     }
    ],
    "metadata": {}
