--- a/Exoplanets.ipynb
+++ b/Exoplanets.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:612fa8ff0f3227610412b66a3544afc1ce25b1f74ada61e4564c6e75e8f194b4"
+  "signature": "sha256:f47d8bd06f150ead9ec9b0bdf34955a8b0029b0c3165e7ce2356cb4e4697716f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -341,11 +341,152 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "from IPython.core.display import HTML\n",
+      "css_file = '../styles.css'\n",
+      "HTML(open(css_file, \"r\").read())"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": [
+      {
+       "html": [
+        "<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Kameron' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Lato:200,300,400' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>\n",
+        "<style>\n",
+        "\n",
+        "@font-face {\n",
+        "    font-family: \"Computer Modern\";\n",
+        "    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+        "}\n",
+        "\n",
+        "#notebook_panel { /* main background */\n",
+        "    background: rgb(245,245,245);\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.cell { /* set cell width */\n",
+        "    width: 800px;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "\n",
+        "div #notebook { /* centre the content */\n",
+        "    background: #fff; /* white background for content */\n",
+        "    width: 900px;\n",
+        "    margin: auto;\n",
+        "    padding-left: 0em;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "#notebook li { /* More space between bullet points */\n",
+        "    margin-top:0.8em;\n",
+        "}\n",
+        "\n",
+        "/* draw border around running cells */\n",
+        "div.cell.border-box-sizing.code_cell.running { \n",
+        "    border: 1px solid #111;\n",
+        "}\n",
+        "\n",
+        "/* Put a solid color box around each cell and its output, visually linking them*/\n",
+        "div.cell.code_cell {\n",
+        "    background-color: rgb(256,256,256); \n",
+        "    border-radius: 0px; \n",
+        "    padding: 0.5em;\n",
+        "    margin-left:1em;\n",
+        "    margin-top: 1em;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.text_cell_render{\n",
+        "    width:800px;\n",
+        "    margin-left:auto;\n",
+        "    margin-right:auto;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.input_area {\n",
+        "    border-color: rgba(0,0,0,0.10);\n",
+        "    background: rbga(0,0,0,0.5);\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.text_cell {\n",
+        "    max-width: 105ex; /* instead of 100%, */\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.text_cell_render {\n",
+        "    font-family: \"Crimson Text\";\n",
+        "    font-size: 12pt;\n",
+        "    line-height: 145%; /* added for some line spacing of text. */\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render h1,\n",
+        "div.text_cell_render h2,\n",
+        "div.text_cell_render h3,\n",
+        "div.text_cell_render h4,\n",
+        "div.text_cell_render h5,\n",
+        "div.text_cell_render h6 {\n",
+        "    font-family: 'Kameron';\n",
+        "    font-weight: 300;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render h1 {\n",
+        "    font-size: 24pt;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render h2 {\n",
+        "    font-size: 18pt;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render h3 {\n",
+        "    font-size: 14pt;\n",
+        "}\n",
+        "\n",
+        ".rendered_html pre,\n",
+        ".rendered_html code {\n",
+        "    font-size: medium;\n",
+        "}\n",
+        "\n",
+        ".rendered_html ol {\n",
+        "    list-style:decimal;\n",
+        "    margin: 1em 2em;\n",
+        "}\n",
+        "\n",
+        ".CodeMirror pre{\n",
+        "        font-family: 'Source Code Pro', Consolas, monocco, monospace;\n",
+        "}\n",
+        "\n",
+        "</style>\n",
+        "<script>\n",
+        "    MathJax.Hub.Config({\n",
+        "                        TeX: {\n",
+        "                           extensions: [\"AMSmath.js\"],\n",
+        "                           equationNumbers: { autoNumber: \"AMS\", useLabelIds: true}\n",
+        "                           },\n",
+        "                tex2jax: {\n",
+        "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+        "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+        "                },\n",
+        "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+        "                \"HTML-CSS\": {\n",
+        "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+        "                }\n",
+        "        });\n",
+        "</script>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "<IPython.core.display.HTML at 0x10661a2d0>"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
