--- a/Orbits.ipynb
+++ b/Orbits.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "div.cell.code_cell {\n",
        "    background-color: rgb(256,256,256); \n",
        "    border-radius: 0px; \n",
-       "    width: 105ex;\n",
+       "    /* width: 105ex; */\n",
        "    padding: 0.5em;\n",
        "    margin-left:1em;\n",
        "    margin-top: 1em;\n",
@@ -64,11 +64,11 @@
        "    background: rbga(0,0,0,0.5);\n",
        "}\n",
        "\n",
-       "\n",
+       "/*\n",
        "div.text_cell {\n",
        "    max-width: 105ex; /* instead of 100%, */\n",
        "}\n",
-       "\n",
+       "*/\n",
        "\n",
        "div.text_cell_render {\n",
        "    font-family: \"Crimson Text\";\n",
@@ -122,6 +122,30 @@
        "    padding-right: 10px;\n",
        "}\n",
        "\n",
+       ".fa {\n",
+       "    padding: 5px;\n",
+       "    }\n",
+       "    \n",
+       "kbd {\n",
+       "    padding:0.1em 0.6em;\n",
+       "    border:1px solid #ccc;\n",
+       "    font-size:11px;\n",
+       "    font-family:Arial,Helvetica,sans-serif;\n",
+       "    background-color:#f7f7f7;\n",
+       "    color:#333;\n",
+       "    -moz-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 2px #ffffff inset;\n",
+       "    -webkit-box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 2px #ffffff inset;\n",
+       "    box-shadow:0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 2px #ffffff inset;\n",
+       "    -moz-border-radius:3px;\n",
+       "    -webkit-border-radius:3px;\n",
+       "    border-radius:3px;\n",
+       "    display:inline-block;\n",
+       "    margin:0 0.1em;\n",
+       "    text-shadow:0 1px 0 #fff;\n",
+       "    line-height:1.4;\n",
+       "    white-space:nowrap;\n",
+       "}\n",
+       "\n",
        "</style>\n",
        "<script>\n",
        "    MathJax.Hub.Config({\n",
@@ -144,7 +168,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +579,7 @@
    "source": [
     "<section class=\"challenge panel panel-success\"> \n",
     "<div class=\"panel-heading\">\n",
-    "<h2><span class=\"fa fa-pencil\"></span>Excercise:</h2>\n",
+    "<h2><span class=\"fa fa-pencil\"></span>Exercise:</h2>\n",
     "</div>\n",
     "</section>"
    ]
