moving files around after splitting

--- a/Orbits.ipynb
+++ b/Orbits.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "######Run the cell below to load the visual style of this notebook."
+    "###### Run the cell below to load the visual style of this notebook."
    ]
   },
   {
@@ -175,7 +175,7 @@
    ],
    "source": [
     "from IPython.core.display import HTML\n",
-    "css_file = '../styles.css'\n",
+    "css_file = 'styles.css'\n",
     "HTML(open(css_file, \"r\").read())"
    ]
   },
@@ -676,31 +676,6 @@
     "y = 4\n",
     "print( 100 + x * y**2 )\n",
     "print( 100 + (x * (y**2)) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### A warning about division and integers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Any computing language has it's pain points. One of Python's nasty little secrets is that there are two versions of the language, Python2 and Python3. We will be learning Python 3. However, you should be aware that if you divide two integers in Python 2, the result is also an integer. Therefore if your computer has Python 2 installed, typing\n",
-    "```python\n",
-    "new_value = 3/2\n",
-    "print( new_value )\n",
-    "```\n",
-    "would print 1!\n",
-    "\n",
-    "You can get round this by making one of the numbers a decimal number, e.g \n",
-    "```python\n",
-    "new_value = 3./2\n",
-    "print( new_value )\n",
-    "```"
    ]
   },
   {
